# kitsune

clang/include/clang/Basic/: Attr.td
clang/lib/CodeGen/: CGCall.cpp
clang/lib/Frontend/: CompilerInvocation.cpp
clang/lib/Sema/: SemaDeclAttr.cpp
flang/docs/: Extensions.md
flang/include/flang/Evaluate/: real.h
flang/lib/Evaluate/: fold-integer.cpp  fold-logical.cpp  intrinsics.cpp  real.cpp
flang/lib/Frontend/: CompilerInvocation.cpp
flang/lib/Lower/: Bridge.cpp  CallInterface.cpp  ConvertExpr.cpp  IO.cpp  IntrinsicCall.cpp  PFTBuilder.cpp
flang/lib/Optimizer/Builder/: DoLoopHelper.cpp  MutableBox.cpp
flang/lib/Parser/: unparse.cpp
flang/lib/Semantics/: check-omp-structure.cpp  mod-file.cpp  resolve-directives.cpp
flang/test/Evaluate/: rewrite01.f90
flang/test/Fir/: loopconcurrent01.fir
flang/test/Lower/: allocatables.f90  derived-types-kind-params.f90  fail_image.f90  io-implied-do-fixes.f90  pre-fir-tree04.f90
flang/tools/f18/: CMakeLists.txt
kitsune/: CMakeLists.txt
kitsune-tests/reductions/: l2.c  makefile
kitsune/cmake/caches/: kitsune-dev-darwin-aarch64.cmake  kitsune-dev-darwin.cmake  kitsune-dev-desktop.cmake
kitsune/cmake/modules/: KitsuneUtils.cmake
kitsune/configs/: CMakeLists.txt
kitsune/experiments/inc/: config.mk.cmake  cuda.mk  hip.mk
kitsune/experiments/mlir/: linalg.mlir  makefile  test.c
kitsune/runtime/: CMakeLists.txt
kitsune/test/: CMakeLists.txt  lit.site.cfg.py.in
kitsune/test/cuda/: config.cpp  default-args.cpp
kitsune/test/hip/: config.cpp  default-args.cpp
kitsune/test/kokkos/: config.cpp  default-args.cpp
kitsune/test/none/: config.cpp
kitsune/test/opencilk/: config.cpp  default-args.cpp
kitsune/test/openmp/: config.cpp  default-args.cpp
kitsune/test/qthreads/: config.cpp  default-args.cpp
kitsune/test/realm/: config.cpp  default-args.cpp
kitsune/test/serial/: config.cpp
kitsune/tools/: CMakeLists.txt
kitsune/tools/kit-config/: CMakeLists.txt  kit-config.cpp
llvm/: CMakeLists.txt
llvm/lib/Transforms/Tapir/: CMakeLists.txt  CudaABI.cpp  GPUABI.cpp  LoopSpawningTI.cpp  LoopStripMine.cpp  LoweringUtils.cpp  OpenCilkABI.cpp
mlir/include/mlir/: InitAllDialects.h
mlir/lib/Conversion/: CMakeLists.txt  PassDetail.h
mlir/test/mlir-opt/: commandline.mlir
(+36 files in other folders)
